RESOLVED FIXED 275919
Backdrop-filter: blur with a transparent web view renders incorrectly
https://bugs.webkit.org/show_bug.cgi?id=275919
Summary Backdrop-filter: blur with a transparent web view renders incorrectly
Matt Woodrow
Reported 2024-06-26 14:17:36 PDT
Calculation of whether the backdrop will be opaque doesn't work for vision, so we should always assume transparent and use inputNormalizeEdgesTransparent.
Attachments
Matt Woodrow
Comment 1 2024-06-26 14:17:59 PDT
Matt Woodrow
Comment 2 2024-06-26 14:20:05 PDT
EWS
Comment 3 2024-06-27 15:29:04 PDT
Committed 280435@main (560e7ebc0134): <https://commits.webkit.org/280435@main> Reviewed commits have been landed. Closing PR #30204 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.