Backdrop-filter: blur with a transparent web view renders incorrectly on visionOS. https://bugs.webkit.org/show_bug.cgi?id=275919 <rdar://130113401>

Reviewed by Tim Horton.

Calculation of whether the backdrop will be opaque doesn't work for vision, so we should
always assume transparent and use inputNormalizeEdgesTransparent.

* Source/WebCore/platform/graphics/ca/cocoa/PlatformCAFiltersCocoa.mm:
(WebCore::PlatformCAFilters::setFiltersOnLayer):

Canonical link: https://commits.webkit.org/280435@main