Source/WebCore/platform/graphics/ca/cocoa/PlatformCAFiltersCocoa.mm
@@ -327,18 +327,19 @@ void PlatformCAFilters::setFiltersOnLayer(PlatformLayer* layer, const FilterOper
             CAFilter *filter = [CAFilter filterWithType:kCAFilterGaussianBlur];
             [filter setValue:[NSNumber numberWithFloat:floatValueForLength(blurOperation.stdDeviation(), 0)] forKey:@"inputRadius"];
             if ([layer isKindOfClass:[CABackdropLayer class]]) {
+#if PLATFORM(VISION)
+                // FIXME: https://bugs.webkit.org/show_bug.cgi?id=275965
+                UNUSED_PARAM(backdropIsOpaque);
+                [filter setValue:@YES forKey:@"inputNormalizeEdgesTransparent"];
+#else
                 // If the backdrop is displayed inside a transparent web view over
                 // a material background, we need `normalizeEdgesTransparent`
                 // in order to render correctly.
                 if (backdropIsOpaque)
                     [filter setValue:@YES forKey:@"inputNormalizeEdges"];
-                else {
-#if PLATFORM(VISION)
-                    [filter setValue:@YES forKey:@"inputNormalizeEdgesTransparent"];
-#else
+                else
                     [filter setValue:@YES forKey:@"inputHardEdges"];
 #endif
-                }
             }
             [filter setName:filterName];
             return filter;
